# manobela

./: README-test  README.md
.github/workflows/: deploy-backend-azure.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  lifespan.py
backend/app/models/: inference.py  video_upload.py  webrtc.py
backend/app/routers/: driver_monitoring.py  health.py  webrtc.py
backend/app/services/: connection_manager.py  face_landmarker.py  ice_servers.py  object_detector.py  phone_usage.py  smoother.py  video_aggregation.py  video_precessor.py  video_processor.py  video_upload_processor.py  webrtc_handler.py  yawn_detector.py
backend/app/services/metrics/: base_metric.py  eye_closure.py  gaze.py  gaze_metric.py  head_pose.py  metric_manager.py  phone_usage.py  yawn.py  yawn_detector.py
backend/app/services/metrics/utils/: calc.py  geometry.py  head_pose_2d.py  mar.py
docs/: README.md
mobile/: .env.example  app.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
mobile/app/: _layout.tsx  index.tsx
mobile/components/: connection-status.tsx  database-provider.tsx  inference-display.tsx  media-stream-view.tsx  monitoring-controls.tsx  upload-playback.tsx
mobile/db/: client.ts  schema.ts
mobile/drizzle/: 0000_dapper_rogue.sql  migrations.js
mobile/hooks/: useCamera.ts  useMonitoringSession.ts  useUploadPlayback.ts  useVideoUpload.ts  useWebRTC.ts
mobile/lib/: settings.ts
mobile/services/: ice-servers.ts
website/: next.config.ts  package.json  pnpm-lock.yaml
(+90 files in other folders)
